[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydavinci"
version = "0.3.1"
description = "A lightly opinionated DaVinci Resolve Python API wrapper"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Caleb Trevatt", email = "sk188okj@duck.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
]
dependencies = [
    "pydantic>=2.10.6",
    "rich>=13.0.0",
    "typing_extensions>=4.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pre-commit>=2.18.1",
    "pytest>=7.1.2",
    "mypy>=1.8.0",
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocs-autorefs>=0.4.1",
    "mkdocs-material>=8.2.9",
    "mkdocs-material-extensions>=1.0.3",
    "mkdocstrings>=0.18.1",
    "mkdocstrings-python>=0.6.6",
]

[project.urls]
Homepage = "https://github.com/in03/pydavinci"
Source = "https://github.com/in03/pydavinci"
Documentation = "https://in03.github.io/pydavinci/resolve"

[tool.mypy]
strict = true
implicit_reexport = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
# Enable all rules by default, then explicitly disable
select = ["ALL"]
ignore = [
    "E501",  # line length (handled by formatter)
    "F403",  # star imports
    "N805",  # self argument
    "N804",  # first argument of classmethod
    "W293",  # blank line contains whitespace
]
# Add formatting support
line-length = 100
target-version = "py312"
fix = true
unsafe-fixes = false

# Add import sorting
src = ["src"]
extend-include = ["*.ipynb", "*.pyi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.hatch.version]
path = "src/pydavinci/__init__.py"

[tool.hatch.build]
packages = ["src/pydavinci"]
